removed meida queries from contact.html as I could not fix color when collapsed

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,4 +1,4 @@
-/* changed background color 
+ /* changed background color  */
 body {
     background-color: rgb(220, 231, 231);
 }
@@ -25,22 +25,3 @@ h1 {
     color: yellow;
 }
 
-/* When page hits 992px breakpoint, this will change nav and text color to violet */
-@media screen and (max-width:992px){
-    .bg-purple, .btn-outline-red, .btn-block, footer, .text-light{
-        background-color: rgb(245, 58, 183) !important;
-    }
-    .text-purple, .btn, #form_id, .btn-outline-info{
-        color:rgb(245, 58, 183) !important;
-    }
-}
-/* When page hits 992px breakpoint, this will change nav and text color to red */
-
-@media screen and (max-width:700px){
-    .bg-purple, .btn-outline-red, .btn-blockfooter, .text-light{
-        background-color: rgb(226, 21, 38) !important;
-    }
-    .text-purple, .btn, #form_id, .btn-outline-info{
-        color:rgb(226, 21, 38) !important;
-    }
-} */
